Updated index.html with Guo puns

--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
 <h1 style="margin:50px;" align="center" id="welcome-to-guopro-com">Welcome to GuoPro.com</h1>
 <p align="center"><a href="https://www.gopro.com"><img align="center;" src="bin/guopro.png" width="50%"></a></p>
 <h3 align="center" id="we-are-pro-guos">We are pro Guos.</h3>
+
+<p align="center">The following are some additional <b>Guo</b> puns to entertain you while you're here:
+<ul>
+  <li>Guo big or Guo home</li>
+  <li>You won the Guold medal!</li>
+  <li>Don't be a Guotato</li>
+</ul>
+</p>
