--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <h3 align="center" id="we-are-pro-guos">We are pro Guos.</h3>
 
 <p align="center">The following are some additional <b>Guo</b> puns to entertain you while you're here:
-<ul>
+<ul align="center">
   <li>Guo big or Guo home</li>
   <li>You won the Guold medal!</li>
   <li>Don't be a Guotato</li>
