Lol playing with bootstrap

--- a/list.html
+++ b/list.html
@@ -33,22 +33,28 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand"><a href="index.html">GuoPro</a></h3>
+                <h3 class="masthead-brand"><a href="index.html">GuoPro</a></h3>
               <nav>
                 <ul class="nav masthead-nav">
-                  <li class="active"><a href="#">Home</a></li>
-                  <li><a href="list.html">The List</a></li>
+                  <li><a href="index.html">Home</a></li>
+                  <li class="active"><a href="#">The List</a></li>
                 </ul>
               </nav>
             </div>
           </div>
 
-          <div class="inner cover">
-            <h1 class="cover-heading">GuoPro.com</h1>
-            <p class="lead">GuoPro.com - We are Pro Guos</p>
-            <p class="lead">The world's leading source of Guo Puns</p>
-          </div>
-
+          <ol class = "list-unstyled">
+            <li class = "list-group-item">Guo big or Guo home</li>
+            <li class = "list-group-item">You won the Guold medal!!!</li>
+            <li class = "list-group-item">Don't be a Guotato</li>
+            <li class = "list-group-item">Guo my God! (GMG)</li>
+            <li class = "list-group-item">Guo away, pls</li>
+            <li class = "list-group-item">I am stressed, oh Guo is me</li>
+            <li class = "list-group-item">This game is so bloody and Guory</li>
+            <li class = "list-group-item">Gonna go to the gym today and get Guole</li>
+            <li class = "list-group-item">Hey! Quit jumping on my PoGuo stick!</li>
+            <li class = "list-group-item">Guo Oh.</li>
+          </ol>
         </div>
 
       </div>
